WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265422
[WebRTC] Release assertion in webrtc::RtpPacketizerH264::PacketizeStapA on bad input
https://bugs.webkit.org/show_bug.cgi?id=265422
Summary
[WebRTC] Release assertion in webrtc::RtpPacketizerH264::PacketizeStapA on ba...
David Kilzer (:ddkilzer)
Reported
2023-11-27 20:02:53 PST
Release assertion in webrtc::RtpPacketizerH264::PacketizeStapA on bad input. This release assertion fires when invalid input is passed in to `webrtc::RtpPacketizerH264::RtpPacketizerH264()` in `Source/ThirdParty/libwebrtc/Source/webrtc/modules/rtp_rtcp/source/rtp_format_h264.cc`: ``` [...] while (payload_size_left >= payload_size_needed()) { RTC_CHECK_GT(fragment.size(), 0); [...] ``` <
rdar://118859268
>
Attachments
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2023-11-27 20:11:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20969
EWS
Comment 2
2023-11-28 08:21:39 PST
Committed
271215@main
(832866a2a943): <
https://commits.webkit.org/271215@main
> Reviewed commits have been landed. Closing PR #20969 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug