[WebRTC] Release assertion in webrtc::RtpPacketizerH264::PacketizeStapA on bad input https://bugs.webkit.org/show_bug.cgi?id=265422 <rdar://118859268>

Reviewed by Youenn Fablet.

Change release assertion into a runtime check to avoid a crash.

* Source/ThirdParty/libwebrtc/Source/webrtc/modules/rtp_rtcp/source/rtp_format_h264.cc:
(webrtc::RtpPacketizerH264::GeneratePackets):
- Check return value of PacketizeStapA() and return false if
  std::nullopt was returned.
(webrtc::RtpPacketizerH264::PacketizeStapA):
- Change implementation to return std::optional<size_t>.
- Return std::nullopt instead of crashing if fragment.size() == 0.
* Source/ThirdParty/libwebrtc/Source/webrtc/modules/rtp_rtcp/source/rtp_format_h264.h:
(webrtc::RtpPacketizerH264::PacketizeStapA):
- Change declaration to return std::optional<size_t>.

* Source/ThirdParty/libwebrtc/WebKit/0001-WebRTC-Release-assertion-in-webrtc-RtpPacketizerH264.patch: Add.

Canonical link: https://commits.webkit.org/271215@main